# YOLO-Agent

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
configs/: annotation_rules.yaml  augmentation_policies.yaml  capability_maturity.yaml  compatibility_rules.yaml  component_aliases.yaml  component_compatibility.yaml  component_taxonomy.yaml  diagnosis_graph.yaml  error_action_policies.yaml  llm_decision.example.yaml  loop_policy.yaml  optimization_recipes.yaml  paper_diagnosis_rules.yaml  paper_sources.yaml  postprocess_strategies.yaml  recipe_bundles.yaml  reproduction_policy.yaml  research_priority.yaml  research_sources.yaml  search_space.yaml  training_failure_modes.yaml  training_recipes.yaml  utility_policy.yaml  yolo26_compatibility.yaml
docs/: awesome-object-detection.md  capability-maturity.md  cli.md  coco-yolo26.md  concepts.md  custom-dataset.md  evidence.md  gpu-certification.md  install.md  llm-setup.md  loop-engineering.md  paper-intelligence.md  quickstart.md  training-modes.md  troubleshooting.md
presets/: coco_yolo26_auto.yaml
tests/: __init__.py  conftest.py  paired_result_helpers.py  test_ablation_planner.py  test_active_learning.py  test_adapter.py  test_annotation_advisor.py  test_artifact_manifest.py  test_asha_scheduler.py  test_augmentation_policy.py  test_auto_optimization_loop.py  test_awesome_catalog_importer.py  test_awesome_snapshot_builder.py  test_baseline_acceptance.py  test_beginner_documentation.py  test_budget_optimizer.py  test_candidate_generator.py  test_candidate_promotion.py  test_capability_matrix.py  (+107 more)
(+217 files in other folders)
