[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "yolo-agent"
version = "0.1.0"
description = "Componentized YOLO optimization agent and experiment harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "YOLO Agent Contributors" }
]
dependencies = [
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
yolo-agent = "yolo_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

